[metadata]
name = iggyenrich
version = 0.0.1
author = Iggy
author_email = support@askiggy.com
description = Enrich data using Iggy (askiggy.com)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/askiggy/iggy-enrich-python
project_urls =
    Issue Tracker = https://github.com/askiggy/iggy-enrich-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = iggy askiggy location gis geospatial geography data science machine learning

[options]
packages = iggyenrich
install_requires = 
    fastparquet==0.7.1
    pandas==1.3.4
    geopandas
    pyarrow==6.0.0
    pydantic==1.8.2
    pyquadkey2==0.2.0
    Shapely==1.8.0
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = iggyenrich

